--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 1</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/1-gallery.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./1-gallery.html" />
-      <load src="./2-form.html" />
+      <ul>
+        <li><a href="./1-gallery.html">Gallery Task</a></li>
+        <li><a href="./2-form.html">Feedback Form Task</a></li>
+      </ul>
     </main>
-
-    <script type="module" src="./js/1-gallery.js"></script>
-    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
